--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,13 @@
 section {
     padding: calc(2 * var(--section-spacing)) 0;
 }
+
+
+
+.img-container {
+    max-width: 120px;
+    aspect-ratio: 1;
+}
+.img-container img {
+    object-fit: cover;
+}
